fix: add scrollbar stable #90

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -154,4 +154,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  .scrollbar-gutter-stable {
+    scrollbar-gutter: stable;
+  }
 }
